# speech-emotion-whisper

./: .gitignore  CLAUDE.md  LICENSE  README.md  analysis_results_pantene_marketing.csv  audio_extractor.py  audio_metrics.py  audio_segmenter.py  emotion_analyzer.py  main.py  pyproject.toml  result_display.py  speaker_diarization.py  transcription.py
